--- a/src/WorkerService/appsettings.json
+++ b/src/WorkerService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "SapServiceLayer": {
     "UserName": "manager",
-    "PassWord": "okser@123",
+    "PassWord": "password",
     "Url": "https://localhost:50000/b1s/v1/"
   }
 }
